--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "@testing-library/jest-dom": "https://esm.sh/@testing-library/jest-dom@^6.9.1",
+    "@testing-library/react": "https://esm.sh/@testing-library/react@^16.3.2",
+    "@testing-library/user-event": "https://esm.sh/@testing-library/user-event@^14.6.1",
+    "@jest/globals": "https://esm.sh/@jest/globals@^30.2.0",
+    "@playwright/test": "https://esm.sh/@playwright/test@^1.58.1"
   }
 }
 </script>
